welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:6: error: not found: value i
				T(i)=getCouleurSol()
                                  ^Array2:17: error: not found: value i
				setCouleurBrosse(T(i + decalage) % getMondeHauteur())
                                                   ^